# VoxEngine

./: .gitignore  ArchipelGenerator.cpp  ArchipelGenerator.hpp  CImg.h  CMakeLists.txt  DesertGenerator.cpp  DesertGenerator.hpp  Makefile  MangroveGenerator.cpp  MangroveGenerator.hpp  MapGenerator.cpp  MapGenerator.hpp  PrairieGenerator.cpp  PrairieGenerator.hpp  ProgMain.cpp  README.md  SnowPrairieGenerator.cpp  SnowPrairieGenerator.hpp  SnowValleyGenerator.cpp  SnowValleyGenerator.hpp  Timer.cpp  Timer.hpp  VoxEngine  VoxMap.cpp  VoxMap.hpp  biome.hpp  brouillons.txt  camera.cpp  camera.h  glGeometry.cpp  glGeometry.hpp  glPipeline.cpp  glPipeline.hpp  glStructures.hpp  maMap.hdr  stdout.txt
Map/: maMap.hdr  maMap.img  part.img  snow.hdr  snowValley.img  standard.img
assets/Aku Aku/: AkuAku.mtl  aku_aku.mtl  info.txt
assets/Chaos Emeralds/: Aqua Chaos Emerald.DAE  Aqua Chaos Emerald.mtl  Blue Chaos Emerald.DAE  Blue Chaos Emerald.mtl  Green Chaos Emerald.DAE  Green Chaos Emerald.mtl  Purple Chaos Emerald.DAE  Purple Chaos Emerald.mtl  Red Chaos Emerald.DAE  Red Chaos Emerald.mtl  White Chaos Emerald.DAE  White Chaos Emerald.mtl  Yellow Chaos Emerald.DAE  Yellow Chaos Emerald.mtl  cmn_emeraldB_xxlu_r.dds  cmn_emeraldG_xxlu_r.dds  cmn_emeraldP_xxlu_r.dds  cmn_emeraldR_xxlu_r.dds  cmn_emeraldW_xxlu_r.dds  cmn_emeraldY_xxlu_r.dds
assets/EngiBot/: EngiBot.dae
assets/Eyebot/: Eyebot.mtl
assets/WII_U/Eevee/: Eevee.DAE  Eevee.FBX  Eevee.SMD  Eevee.mtl
assets/cubes/: cube.mtl
assets/gems/: Blue Gem.mtl  Clear Gem.mtl  Green Gem.mtl  Purple Gem.mtl  Red Gem.mtl  Yellow Gem.mtl  crystal.mtl  info.txt
assets/gw2/: 563849.mtl
assets/lightVolumes/: uvSphere.mtl
assets/mecha/: T-51b_Power_Armor.mtl  T-51b_Power_Armor_D.tga  T-51b_Power_Armor_N.tga  T-51b_Power_Armor_S.tga  mechaFlower.mtl
assets/wall/: Wall.mtl
include/: ArchipelGenerator.hpp  DesertGenerator.hpp  MangroveGenerator.hpp  MapGenerator.hpp  PrairieGenerator.hpp  SnowPrairieGenerator.hpp  SnowValleyGenerator.hpp  VoxMap.hpp  biome.hpp  camera.hpp  glGeometry.hpp  glPipeline.hpp  glStructures.hpp
shaders/: SSAOBlur.frag  SSAOBlur.vert  deferredLightPass.frag  deferredSSAO.frag  deferredSSAO.vert  forward.frag  forward.vert  instancedDeferred.frag  instancedDeferred.vert  instancedDeferredGeoPass.frag  instancedDeferredLight.frag  instancedDeferredLight.vert  instancedForward.frag  instancedForward.vert  instancedPhong.frag  instancedPhong.vert  instancedShadow.frag  instancedShadow.vert  phongFrag.frag  phongVert.vert  shadowTex.frag  shadowTex.vert
src/: ArchipelGenerator.cpp  DesertGenerator.cpp  MangroveGenerator.cpp  MapGenerator.cpp  PrairieGenerator.cpp  ProgMain.cpp  SnowPrairieGenerator.cpp  SnowValleyGenerator.cpp  Timer.cpp  VoxMap.cpp  camera.cpp  glGeometry.cpp  glPipeline.cpp
(+36 files in other folders)
