cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
set(CMAKE_BUILD_TYPE Release)
project(VoxEngine)

string(ASCII 27 Esc)
set(ColourReset "${Esc}[m")
set(Red     "${Esc}[1;31m")
set(Green   "${Esc}[1;32m")
set(Yellow  "${Esc}[1;33m")
set(Blue    "${Esc}[1;34m")
set(Magenta "${Esc}[1;35m")
set(Cyan    "${Esc}[1;36m")
set(White   "${Esc}[1;37m")

# Set the output folder where your program will be created
message("${Magenta}Defining output directories.${ColourReset}")
set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR})
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
message("${Green}DONE.${ColourReset}")

message("${Magenta}Finding include directories.${ColourReset}")
include_directories("${CMAKE_SOURCE_DIR}/include")
include_directories("${CMAKE_SOURCE_DIR}/libs")
message("${Green}DONE.${ColourReset}")

message("${Magenta}Listing source files.${ColourReset}")
file(GLOB_RECURSE sources src/*.cpp)
add_executable(VoxEngine ${sources})
message("${Green}DONE.${ColourReset}")

message("${Magenta}Defining libraries link flags.${ColourReset}")

if(WIN32)
  message("--${Yellow}Windows system detected.${ColourReset}")
  add_definitions(-DWIN32)
  if(MSVC)
    message("----${Red}Microsoft visual C++ not supported.${ColourReset}" FATAL_ERROR)
  endif(MSVC)

  if(MINGW)
    message("----${Yellow}MinGW detected.${ColourReset}")
    set(GLEW_LIB glew32)
    set(OPENGL_LIB opengl32)
    set(MATH_LIB m)
    set(MINGW_LIB mingw32)
    set(ASSIMP_LIB assimp)
    set(SDLMAIN_LIB SDLmain)
    set(SDL_LIB SDL)
    set(SDL2_LIB SDL2)
    SET(CMAKE_CXX_FLAGS "-std=c++11 -O3")
    target_link_libraries(VoxEngine PUBLIC "${GLEW_LIB}" PUBLIC "${OPENGL_LIB}" PUBLIC "${ASSIMP_LIB}" PUBLIC "${MATH_LIB}" PUBLIC "${MINGW_LIB}" PUBLIC "${SDLMAIN_LIB}" PUBLIC "${SDL2_LIB}" PUBLIC "${SDL_LIB}")
  endif(MINGW)

  if(CYGWIN)
    message("----${Yellow}Cygwin detected.${ColourReset}")
  endif(CYGWIN)

  if(MSYS)
    message("----${Yellow}MSYS detected.${ColourReset}")
  endif(MSYS)
endif(WIN32)

if(UNIX AND NOT APPLE)
  message("----${Yellow}Linux or BSD or Solaris or Minix system detected.${ColourReset}")
  add_definitions(-DUNIX)
  set(GLEW_LIB glew)
  set(OPENGL_LIB gl)
  set(MATH_LIB m)
  set(ASSIMP_LIB assimp)
  set(SDLMAIN_LIB SDLmain)
  set(SDL_LIB SDL)
  set(SDL2_LIB SDL2)
  SET(CMAKE_CXX_FLAGS "-std=c++11 -O3")
  target_link_libraries(VoxEngine PUBLIC "${GLEW_LIB}" PUBLIC "${OPENGL_LIB}" PUBLIC "${ASSIMP_LIB}" PUBLIC "${MATH_LIB}" PUBLIC "${SDLMAIN_LIB}" PUBLIC "${SDL2_LIB}" PUBLIC "${SDL_LIB}")
endif()

if(APPLE)
  message("----${Red}Apple OS detected and not supported for now ... sorry :(.${ColourReset}" FATAL_ERROR)
endif(APPLE)
message("${Green}DONE.${ColourReset}")
